set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
project(OSTP)

add_executable(cpu examples/cpu.c)
add_executable(mem examples/mem.c)
add_executable(threads examples/threads.c)
add_executable(p1 examples/p1.c)
add_executable(p2 examples/p2.c)
add_executable(p3 examples/p3.c)
add_executable(p4 examples/p4.c)
add_executable(5.1 homework/5.1.c)
add_executable(5.2 homework/5.2.c)
add_executable(5.3 homework/5.3.c)

add_compile_options(-Wall -Wextra -Werror -pthread)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
# add_library()
# add_executable()