set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
project(OSTP)
cmake_minimum_required(VERSION 3.25)
# set(CMAKE_C_STANDARD 11)
# set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11")  # 或者使用其他版本，如 c99, c14, c17

add_executable(pthr_test examples/pthr_test.c)
add_executable(cpu examples/S5/cpu.c)
add_executable(mem examples/S5/mem.c)
add_executable(threads examples/S5/threads.c)
add_executable(p1 examples/S5/p1.c)
add_executable(p2 examples/S5/p2.c)
add_executable(p3 examples/S5/p3.c)
add_executable(p4 examples/S5/p4.c)
add_executable(virtualized examples/S13/virtualized.c)
add_executable(array examples/S18/array.c)
add_executable(counter examples/S29/conc_counter.c)
add_executable(condition examples/S30/condition.c)
add_executable(spin_wait examples/S30/spin_wait.c)
add_executable(condition_wait examples/S30/condition_wait.c)
add_executable(signal examples/S31/signal.c)

add_executable(5.1 homework/S5/5.1.c)
add_executable(5.2 homework/S5/5.2.c)
add_executable(5.3 homework/S5/5.3.c)
add_executable(5.5 homework/S5/5.5.c)
add_executable(5.6 homework/S5/5.6.c)
add_executable(5.7 homework/S5/5.7.c)
add_executable(5.8 homework/S5/5.8.c)
add_executable(test homework/S5/test.c)
add_executable(measurement homework/S6/measurement.c)
add_executable(null homework/S14/null.c)

add_compile_options(-Wall -Wextra -Werror -pthread)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
# add_library()
# add_executable()